Version 6.19.09
TODO

Version 6.19.08
14.May.2025
    - fix #105 by converting empty string to None, which has smtplib handling
    - fix #226 by handling all Exception instead of just OSError on SIGCHLD to parent
    - fix #239 by catching ssl.SSLError
    - Merge pull request #237 from meeuw/integration-tests
    - remove python 2 code: only supporting python 3
    - Merge pull request #238 from yshingai/v6.19.07-add-alias
    - support windows-874 cp874
    - Merge pull request #234 from meeuw/fix-incorrect-fsf-address
    - Merge pull request #233 from meeuw/fix-license
    - #220 allow uid_cache=true (latest UID from oldmail-file) in addition to uid_cache=<uidfile>

Version 6.19.07
26.January.2025
    - #225 Missing comma in getmailcore/message.py

Version 6.19.06
18.January.2025
    - #223 publish to pypi workflow
    - #219 #220 increase IMAP efficiency through uid_cache  (needs to be configured) storing last fetched UID
    - updated tests
    - update copyright to 2025

Version 6.19.05
02.October.2024
    - fix #211: --only-oldmail-file command line = only_oldmail_file config: regenerate oldmail file with mails currenlty on server
    - fix #212: oldmail-* reverts when --to-oldmail-on-each-mail is used 
    - Pyp2 fixes (#210)
    - fix #209: using the suggested simpler fix as pathlib is not used so far
    - build and upload sdist
    - Fix invalid SPDX expression

Version 6.19.04
25.August.2024
    - Update getmailrc-examples (#204, #206, #207)
    - #205: pop3: Support use_xoauth2

Version 6.19.03
08 July 2024
    - #199 fix: fails with "TypeError: IMAP4_SSL.__init__()" after changing to Python 3.12 (when keyfile/certfile in config)

Version 6.19.02
01 July 2024
    - #196 fix: handle KeyError (getmail-gmail-xoauth-tokens)
    - #197 fix: detect if --port is set to force the use of the local http server (getmail-gmail-xoauth-tokens)

Version 6.19.01
7 June 2024
    - #195 fix: make mark_read option act same as -ds,

Version 6.19.00
31 May 2024